2004-09-15  Not Zed  <NotZed@Ximian.com>

	** See bug #0xffff.

	* providers/local/camel-local-folder.c
	(camel_local_folder_construct): only emit folder_created if we
	actually created it.

2004-09-03  Not Zed  <NotZed@Ximian.com>

	* camel-tcp-stream-ssl.c (stream_connect): make ssl connection
	async and cancellable, and minor api update to async connection.

2004-08-27  Not Zed  <NotZed@Ximian.com>

	** See bug #64023.

	* providers/nntp/camel-nntp-store.c (camel_nntp_try_authenticate):
	forget the password if it was wrong.

2004-08-26  Sivaiah Nallagatla <snallagatla@novell.com>
	
	* providers/groupwise/camel-gw-listner.c
	(add_calendar_tasks_sources) : change the "CheckList" to "Tasks"
	as there is another foder called chekclist in groupwise not
	related to tasks Fixes #64092

2004-08-25  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* camel-folder.c (folder_getv): Init one variable (remove warning)
	and don't redefine it.

2004-08-23  Not Zed  <NotZed@Ximian.com>

	** See bug #63189.

	* providers/imap/camel-imap-store.c (get_subscribed_folders): only
	LSUB folders we're interested in, and check full name of each path
	element.
	(imap_is_subfolder): helper for above.

2004-08-23  Jeffrey Stedfast  <fejj@novell.com>

	* providers/imap/camel-imap-store.c (get_folders): Check for an
	exception from get_folders_online() here so that we don't send
	commands to an IMAP server after a disconnect for example. See bug
	#63504 for an example.

2004-08-23  Jeffrey Stedfast  <fejj@novell.com>

	* camel-tcp-stream-openssl.c (open_ssl_connection): Call
	SSL_CTX_set_default_verify_paths() to initialise the certificate
	database paths. Thanks to Anton Altaparmakov for this fix.

2004-08-21 Sivaiah Nallagatla <snallagatla@novell.com>
	
	* providers/groupwise/camel-gw-listener.c (account_changed) :
	if any of the settings required for soap interaction changes 
	try connecting to server and resetup the ESources 
        * providers/groupwise/camel-groupwise-provider.c ": don't